--- a/src/app/npc-simulation/npc-simulation.component.html
+++ b/src/app/npc-simulation/npc-simulation.component.html
@@ -1,2 +1,2 @@
-<div #pixiContainer class="simulation-canvas" style="width: 800px; height: 600px;"></div>
-<button (click)="addNpc()">Add NPC</button>
+<div #pixiContainer class="simulation-canvas" style="width: 100%; height: 80vh;"></div>
+<button (click)="addNpc($event)">Add NPC</button>
