🙏Finally visualization is working

--- a/src/app/npc-simulation/npc-simulation.component.html
+++ b/src/app/npc-simulation/npc-simulation.component.html
@@ -1,2 +1,2 @@
-<div #pixiContainer class="simulation-canvas" style="width: 100%; height: 80vh;"></div>
+<svg #svgContainer style="width: 100%; height: 80vh;"></svg>
 <button (click)="addNpc($event)">Add NPC</button>
