feat: implement node tooltips

--- a/src/app/npc-simulation/npc-simulation.component.html
+++ b/src/app/npc-simulation/npc-simulation.component.html
@@ -1,2 +1,6 @@
-<svg #svgContainer style="width: 100%; height: 80vh;"></svg>
+<div class="simulation-container">
+  <svg #svgContainer style="width: 100%; height: 80vh;"></svg>
+  <div #tooltip class="tooltip" style="opacity: 0;"></div>
+</div>
 <button (click)="addNpc($event)">Add NPC</button>
+
