--- a/src/app/npc-simulation/npc-simulation.component.html
+++ b/src/app/npc-simulation/npc-simulation.component.html
@@ -1,7 +1,7 @@
 <svg #svgContainer style="width: 100%; height: 80vh;"></svg>
 <div class="controls">
   <button (click)="addNpc($event)">Add NPC</button>
-  <input type="text" [(ngModel)]="searchTerm" (keyup.enter)="search()" placeholder="Search characters" />
+  <input type="text" [(ngModel)]="searchTerm" (input)="onSearchTermChange()" (keyup.enter)="search()" placeholder="Search characters" />
   <button (click)="search()">Search</button>
 </div>
 
