--- a/src/app/profile-selector/profile-selector.component.css
+++ b/src/app/profile-selector/profile-selector.component.css
@@ -1,10 +1,17 @@
+.selector-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 2rem;
+}
+
 form {
     display: flex;
     flex-direction: column;
     max-width: 300px;
 }
 
-div {
+form div {
     margin-bottom: 1rem;
 }
 
@@ -15,6 +22,8 @@ label {
 
 .search {
     margin-top: 1rem;
+    width: 100%;
+    max-width: 300px;
 }
 
 .search-results {
@@ -23,6 +32,8 @@ label {
     max-height: 200px;
     overflow-y: auto;
     margin-top: 0.5rem;
+    width: 100%;
+    max-width: 300px;
 }
 
 .search-results li {
