--- a/src/app/profile-selector/profile-selector.component.html
+++ b/src/app/profile-selector/profile-selector.component.html
@@ -26,7 +26,14 @@
     placeholder="Search characters"
     name="search" />
 
-  <ul *ngIf="filteredProfiles.length > 0" class="search-results">
+  <ul *ngIf="searchTerm && suggestions.length > 0" class="search-results">
+    <li *ngFor="let s of suggestions">
+      {{ s.name }}
+      <button (click)="goToProfile(+s.id)">View</button>
+    </li>
+  </ul>
+
+  <ul *ngIf="!searchTerm && filteredProfiles.length > 0" class="search-results">
     <li *ngFor="let result of filteredProfiles">
       {{ result.mbti_profile }}
       <button (click)="goToProfile(result.id)">View</button>
