Fix search result display and typing

--- a/src/app/npc-simulation/npc-simulation.component.html
+++ b/src/app/npc-simulation/npc-simulation.component.html
@@ -8,7 +8,7 @@
 
   <ul *ngIf="searchResults.length > 0" class="search-results">
     <li *ngFor="let result of searchResults">
-      {{ result.profile_name_searchable || result.mbti_profile }}
+      {{ result.name }} ({{ getMbti(result) }})
       <button (click)="addSearchedProfile(result)">Add</button>
     </li>
   </ul>
