--- a/src/app/npc-simulation/npc-simulation.component.html
+++ b/src/app/npc-simulation/npc-simulation.component.html
@@ -8,7 +8,8 @@
 
   <ul *ngIf="searchResults.length > 0" class="search-results">
     <li *ngFor="let result of searchResults">
-      {{ result.name }} ({{ getMbti(result) }})
+      <img [src]="result.image.picURL" width="40" alt="{{ result.name }}" />
+      <span>{{ result.name }} ({{ getMbti(result) }})</span>
       <button (click)="addSearchedProfile(result)">Add</button>
     </li>
   </ul>
