--- a/src/app/npc-simulation/npc-simulation.component.html
+++ b/src/app/npc-simulation/npc-simulation.component.html
@@ -19,7 +19,13 @@
     </ul>
   </div>
 
-  <div class="profile-sidebar" *ngIf="selectedProfile as profile">
+  <div
+    class="sidebar-resizer"
+    *ngIf="hoveredProfile"
+    (mousedown)="initResize($event)"
+  ></div>
+
+  <div class="profile-sidebar" *ngIf="hoveredProfile as profile" #sidebar>
     <h3>{{ profile.profile_name || profile.mbti_profile }}</h3>
     <img *ngIf="profile.profile_image_url" [src]="profile.profile_image_url" alt="{{ profile.profile_name }}" />
     <p><strong>MBTI:</strong> {{ profile.mbti_type }}</p>
