Fix sidebar resizing and adjust layout

--- a/src/app/npc-simulation/npc-simulation.component.html
+++ b/src/app/npc-simulation/npc-simulation.component.html
@@ -29,5 +29,6 @@
     *ngIf="hoveredProfile as profile"
     [profile]="profile"
     #sidebar
+    [style.width.px]="sidebarWidth"
   ></app-profile-sidebar>
 </div>
