--- a/src/app/npc-simulation/profile-sidebar.component.html
+++ b/src/app/npc-simulation/profile-sidebar.component.html
@@ -1,7 +1,16 @@
-<h3>{{ profile.profile_name || profile.mbti_profile }}</h3>
-  <img *ngIf="profile.profile_image_url" [src]="profile.profile_image_url" alt="{{ profile.profile_name }}" />
-  <p><strong>MBTI:</strong> {{ profile.mbti_type }}</p>
-  <p><strong>Category:</strong> {{ profile.category }} / {{ profile.subcategory }}</p>
+<div class="profile-header">
+  <img
+    *ngIf="profile.profile_image_url"
+    class="profile-image"
+    [src]="profile.profile_image_url"
+    alt="{{ profile.profile_name }}"
+  />
+  <div class="profile-info">
+    <h3>{{ profile.profile_name || profile.mbti_profile }}</h3>
+    <p><strong>MBTI:</strong> {{ profile.mbti_type }}</p>
+    <p><strong>Category:</strong> {{ profile.category }} / {{ profile.subcategory }}</p>
+  </div>
+</div>
   <p><strong>Votes:</strong> {{ profile.vote_count }} | <strong>Comments:</strong> {{ profile.comment_count }}</p>
   <div *ngIf="profile.systems?.length">
     <h4>Best Votes</h4>
