feat: switch NPC graph to 3D

--- a/src/app/npc-simulation/npc-simulation.component.html
+++ b/src/app/npc-simulation/npc-simulation.component.html
@@ -1,6 +1,6 @@
 <div class="simulation-wrapper">
   <div class="simulation-area">
-    <svg #svgContainer class="simulation-canvas"></svg>
+    <div #graphContainer class="simulation-canvas"></div>
     <div class="zoom-controls">
       <button class="zoom-btn" (click)="zoomIn()">+</button>
       <button class="zoom-btn" (click)="zoomOut()">-</button>
